--- a/churn.ipynb
+++ b/churn.ipynb
@@ -1638,22 +1638,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([1, 0], dtype=int64)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gender : [1 0]\n",
+      "SeniorCitizen : [0 1]\n",
+      "Partner : [1 0]\n",
+      "Dependents : [0 1]\n",
+      "tenure : [ 1 34  2 45  8 22 10 28 62 13 16 58 49 25 69 52 71 21 12 30 47 72 17 27\n",
+      "  5 46 11 70 63 43 15 60 18 66  9  3 31 50 64 56  7 42 35 48 29 65 38 68\n",
+      " 32 55 37 36 41  6  4 33 67 23 57 61 14 20 53 40 59 24 44 19 54 51 26 39]\n",
+      "PhoneService : [0 1]\n",
+      "MultipleLines : [0 1]\n",
+      "InternetService : ['DSL' 'Fiber optic' 'No']\n",
+      "OnlineSecurity : [0 1]\n",
+      "OnlineBackup : [1 0]\n",
+      "DeviceProtection : [0 1]\n",
+      "TechSupport : [0 1]\n",
+      "StreamingTV : [0 1]\n",
+      "StreamingMovies : [0 1]\n",
+      "Contract : ['Month-to-month' 'One year' 'Two year']\n",
+      "PaperlessBilling : [1 0]\n",
+      "PaymentMethod : ['Electronic check' 'Mailed check' 'Bank transfer (automatic)'\n",
+      " 'Credit card (automatic)']\n",
+      "MonthlyCharges : [29.85 56.95 53.85 ... 63.1  44.2  78.7 ]\n",
+      "TotalCharges : [  29.85 1889.5   108.15 ...  346.45  306.6  6844.5 ]\n",
+      "Churn : [0 1]\n"
+     ]
     }
    ],
    "source": [
-    "df1.gender.unique()"
+    "def print_all_unique(df): \n",
+    "    for col in df:\n",
+    "        print(f\"{col} : {df[col].unique()}\")\n",
+    "\n",
+    "print_all_unique(df1)"
    ]
   },
   {
@@ -3153,26 +3176,6 @@
    ],
    "source": [
     "round(229/(229+179),2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Exercise**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Take this dataset for bank customer churn prediction : https://www.kaggle.com/barelydedicated/bank-customer-churn-modeling\n",
-    "\n",
-    "1) Build a deep learning model to predict churn rate at bank. \n",
-    "\n",
-    "2) Once model is built, print classification report and analyze precision, recall and f1-score "
    ]
   }
  ],
